# attention

./: .gitignore  README.org  index.html  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.js
src/: layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/python/: model.py  pre_process.py  predict.py  train.py
src-tauri/python/data/: train.csv
src-tauri/src/: db.rs  main.rs
src/routes/: home.tsx
src/routes/home/: monitor.tsx  quick_start.tsx  today.tsx  upcoming.tsx
